--- a/taskmanager/main/templates/main/base.html
+++ b/taskmanager/main/templates/main/base.html
@@ -14,6 +14,7 @@
   <nav class="my-2 my-md-0 me-md-3">
     <a class="p-2 text-dark" href="{% url 'home'%}">Главная</a>
     <a class="p-2 text-dark" href="{% url 'about'%}">Про нас</a>
+      <a class="p-2 text-dark" href="{% url 'create'%}">Создать запись</a>
   </nav>
 </header>
     {% block content %} {%endblock%}
